# Trolley

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: .coverage  .env  check_recent_runs.py
api/alembic/: env.py
api/alembic/versions/: 1423fd809e0b_add_api_id_to_stores.py  2d2e5caa1f3b_add_postgis_geog_to_stores.py  4996a1644165_increase_image_url_and_product_url_.py  79a4acac15c8_merge_heads.py  7f1535a4ebaa_merge_heads.py  a1b2c3d4e5f6_add_performance_indexes.py  b7c8d9e0f1a2_add_product_search_trgm_indexes.py  c4d5e6f7a8b9_add_price_product_store_uniqueness.py  d05d160f7b38_add_store_unique_constraint.py  e2f3a4b5c6d7_add_trolley_matching_indexes.py  ea40b08aa1e0_initial_migration.py  f1a2b3c4d5e6_liquor_to_grocery_conversion.py
api/app/: main.py
api/app/core/: auth.py  config.py  logging.py
api/app/data/: countdown_stores.json  newworld_stores.json  paknsave_stores.json
api/app/db/: base.py  models.py  seed.py  session.py
api/app/middleware/: __init__.py  rate_limit.py  security.py
api/app/routes/: auth.py  health.py  ingest.py  products.py  stores.py  trolley.py  worker.py
api/app/schemas/: products.py  (+3 more)
api/scripts/: backfill_categories.py  geocode_stores.py
infra/: docker-compose.prod.yml  docker-compose.yml
infra/dockerfiles/: api.Dockerfile  api.prod.Dockerfile  web.Dockerfile  web.prod.Dockerfile  worker.prod.Dockerfile
infra/nginx/: nginx.conf
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/.vercel/: project.json
web/src/: App.tsx  main.tsx  styles.css
(+128 files in other folders)
