[tool.poetry]
name = "trolle"
version = "0.1.0"
description = "NZ grocery price comparison"
authors = ["Troll-E"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = ">=0.110,<1"
uvicorn = { version = ">=0.27", extras = ["standard"] }
pydantic = ">=2.5,<3"
pydantic-settings = ">=2.1,<3"

# Database
sqlalchemy = { version = ">=2.0,<3", extras = ["asyncio"] }
asyncpg = ">=0.29"
psycopg = { version = ">=3.1,<4", extras = ["binary"] }
geoalchemy2 = ">=0.14,<1"
alembic = ">=1.13,<2"

# Cache / Auth / Rate limiting
redis = ">=5.0,<6"
pyjwt = ">=2.8,<3"
bcrypt = ">=4.1,<5"
slowapi = ">=0.1.9,<1"

# Scraping
httpx = ">=0.27,<1"
playwright = ">=1.40,<2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
aiosqlite = ">=0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
